--- a/style/style.scss
+++ b/style/style.scss
@@ -211,7 +211,7 @@ div.switch.change {
 
 
 /*media queries*/
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 400px) and (max-width: 768px) {
     main {
         display: grid;
         grid-template-columns: 1fr 1fr;
