--- a/style/style.scss
+++ b/style/style.scss
@@ -54,14 +54,16 @@ header {
         align-items: center;
         font-size: 12px;
         font-weight: 700;
-        button {
+        .toggle {
             border: none;
             border-radius: 15px;
             height: 20px;
             cursor: pointer;
             margin-left: 10px;
             background-image: linear-gradient(to right, $toggle1, $toggle2);
-            div {
+            display: flex;
+            align-items: center;
+            .circle {
                 content: '';
                 display: block;
                 margin: 0 20px 0 2px;
@@ -82,7 +84,7 @@ main {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     padding: 30px 0;
-    button {
+    .section {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -177,7 +179,7 @@ article {
 }
 
 /*Light theme code:*/
-.switch button div.change {
+.toggle div.circle.change {
     background-color: $paleBlue;
     margin: 0 2px 0 20px;
 }
